--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,18 @@
+/* 
+  body {
+    padding: 0 50px;
+    color: gray;
+  }
+  div.row > div,
+  header {
+    outline: 1px solid gray;
+    padding: 8px;
+    text-align: left;
+  }
+  .indent-me span {
+  margin-left: 50px;
+  } */
+  
   body {
     background-color: grey;
   }
